--- a/delaware-cruise-travel/.gitignore
+++ b/delaware-cruise-travel/.gitignore
@@ -32,6 +32,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
+!.env.example.*
+!.env.test
+!.env.test.*
 
 # vercel
 .vercel
@@ -39,3 +43,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# database
+db.json
+
+# Cypress
+/cypress/snapshots/actual
+/cypress/snapshots/diff
