--- a/delaware-cruise-travel/package.json
+++ b/delaware-cruise-travel/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "react": "^19.0.0",
